[project]
name = "ai-article-generator"
version = "0.1.0"
description = "AI Article Generator — research, write, QA, podcast, WordPress, LinkedIn"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.13.5",
    "elevenlabs>=2.16.0",
    "google-generativeai>=0.8.0",
    "markdown>=3.9",
    "nltk>=3.9.1",
    "openai>=1.108.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "crawl4ai>=0.4.0",
    "dnspython>=2.6.0",
]

[tool.uv]
python-preference = "only-managed"
